--- a/templates/easy_admin/piece/count.html.twig
+++ b/templates/easy_admin/piece/count.html.twig
@@ -1,3 +1,3 @@
-<span class="{{ entity.instance.countNeeded == 0 ? 'text-muted' : entity.instance.countHaving >= entity.instance.countNeeded ? 'text-success' : 'text-warning' }}">
+<span class="badge {{ entity.instance.countNeeded == 0 ? 'badge-secondary' : entity.instance.countHaving >= entity.instance.countNeeded ? 'badge-success' : 'badge-warning' }}">
     {{ entity.instance.countHaving }} / {{ entity.instance.countNeeded }}
 </span>
